--- a/calendar.html
+++ b/calendar.html
@@ -1,75 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Workout Calendar</title>
   <style>
     body {
+      margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background: linear-gradient(to bottom right, #0077b6, #90e0ef);
       color: white;
-      margin: 0;
-      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
-    h1 {
+    header {
       text-align: center;
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
+      padding: 1rem;
     }
     .calendar {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
-      gap: 0.5rem;
-      max-width: 400px;
-      margin: 0 auto 1rem auto;
-    }
-    .day-header {
-      font-weight: bold;
-      text-align: center;
+      gap: 5px;
+      width: 90%;
+      max-width: 600px;
+      margin-top: 1rem;
     }
     .day {
-      background: white;
-      color: #0077b6;
-      border-radius: 8px;
-      height: 60px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      background: rgba(255, 255, 255, 0.2);
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
       cursor: pointer;
       position: relative;
     }
     .day.today {
-      border: 2px solid #023e8a;
       font-weight: bold;
+      border: 2px solid white;
     }
-    .emoji {
-      font-size: 1.2rem;
-      position: absolute;
-      bottom: 4px;
-      right: 4px;
+    .day-header {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 1rem;
+    }
+    .month-controls {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
     }
     .summary {
-      max-width: 400px;
-      margin: 1rem auto;
-      background: white;
-      color: #0077b6;
-      border-radius: 12px;
+      margin-top: 2rem;
+      background: rgba(255,255,255,0.2);
       padding: 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      width: 90%;
+      max-width: 600px;
     }
-    .back-button {
-      display: block;
-      margin: 2rem auto 0 auto;
+    button {
+      font-size: 1rem;
+      padding: 0.75rem 1.25rem;
+      border-radius: 10px;
+      border: none;
       background: white;
       color: #0077b6;
-      padding: 0.75rem 1.25rem;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      margin: 1rem;
+    }
+    .emoji {
+      font-size: 1.5rem;
+      display: block;
+      margin-top: 0.25rem;
     }
     .modal {
       position: fixed;
@@ -77,204 +79,153 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background: white;
-      color: #0077b6;
-      padding: 1rem;
+      color: black;
+      padding: 1.5rem;
       border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      z-index: 999;
-      width: 90%;
-      max-width: 400px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      max-width: 90%;
+      z-index: 10;
     }
-    .modal select, .modal input {
+    .modal h3 {
+      margin-top: 0;
+    }
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
-      margin-bottom: 0.5rem;
-      padding: 0.5rem;
-      font-size: 1rem;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    .modal-buttons {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 1rem;
-    }
-    .modal-buttons button {
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      border: none;
-      background: #0077b6;
-      color: white;
-      font-size: 1rem;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: 9;
     }
   </style>
 </head>
 <body>
-  <h1>Workout Calendar</h1>
-  <div id="month"></div>
-  <div class="calendar" id="calendar"></div>
-  <div class="summary" id="summary"></div>
-  <button class="back-button" onclick="window.location.href='index.html'">Back to Main Menu</button>
-
-  <div class="modal" id="modal" style="display:none;">
-    <h3 id="modalDate"></h3>
-    <select id="workoutType" onchange="handleWorkoutType()">
-      <option value="">Select Workout Type</option>
-      <option value="run">🏃‍♂️ Run</option>
-      <option value="bike">🚴‍♂️ Bike</option>
-      <option value="swim">🏊‍♂️ Swim</option>
-      <option value="weights">🏋️‍♂️ Weights</option>
-      <option value="hockey">🏑 Hockey</option>
-    </select>
-    <input type="number" id="distance" placeholder="Distance (km or m)" />
-    <input type="number" id="duration" placeholder="Time (minutes)" />
-    <select id="weightsType" style="display:none;">
-      <option value="push">Push</option>
-      <option value="pull">Pull</option>
-      <option value="legs">Legs</option>
-    </select>
-    <div class="modal-buttons">
-      <button onclick="saveWorkout()">Save</button>
-      <button onclick="closeModal()">Back</button>
+  <header>
+    <h1>Workout Calendar</h1>
+    <div class="month-controls">
+      <button onclick="prevMonth()">Last Month</button>
+      <div id="monthYear"></div>
+      <button onclick="nextMonth()">Next Month</button>
     </div>
-  </div>
+    <div class="day-header">M T W T F S S</div>
+  </header>
+
+  <div class="calendar" id="calendar"></div>
+
+  <div class="summary" id="summary"></div>
+
+  <button onclick="location.href='index.html'">Back to Main Menu</button>
+
+  <div id="modalContainer"></div>
 
   <script>
-    const calendar = document.getElementById('calendar');
-    const monthDisplay = document.getElementById('month');
-    const summary = document.getElementById('summary');
-    const modal = document.getElementById('modal');
-    const modalDate = document.getElementById('modalDate');
-    const today = new Date();
-    let currentMonth = today.getMonth();
-    let currentYear = today.getFullYear();
-    let selectedDate = '';
+    let currentDate = new Date();
+    let selectedDate = null;
 
-    function saveToLocalStorage(data) {
-      localStorage.setItem('workoutCalendar', JSON.stringify(data));
-    }
+    const workoutEmojis = {
+      run: '🏃',
+      bike: '🚴',
+      swim: '🏊',
+      weights: '🏋️',
+      hockey: '🏑'
+    };
 
-    function getFromLocalStorage() {
-      return JSON.parse(localStorage.getItem('workoutCalendar')) || {};
-    }
-
-    function renderCalendar(month, year) {
+    function renderCalendar() {
+      const calendar = document.getElementById('calendar');
       calendar.innerHTML = '';
-      monthDisplay.textContent = new Date(year, month).toLocaleString('default', { month: 'long', year: 'numeric' });
+      const monthYear = document.getElementById('monthYear');
+      const year = currentDate.getFullYear();
+      const month = currentDate.getMonth();
+      monthYear.textContent = `${currentDate.toLocaleString('default', { month: 'long' })} ${year}`;
 
-      const daysHeader = ['M','T','W','T','F','S','S'];
-      daysHeader.forEach(day => {
-        const div = document.createElement('div');
-        div.classList.add('day-header');
-        div.textContent = day;
-        calendar.appendChild(div);
-      });
+      const start = new Date(year, month, 1);
+      const end = new Date(year, month + 1, 0);
+      const offset = (start.getDay() + 6) % 7; // Monday-start
 
-      const firstDay = new Date(year, month, 1).getDay();
-      const start = (firstDay + 6) % 7;
-      const totalDays = new Date(year, month + 1, 0).getDate();
-      const data = getFromLocalStorage();
-
-      for (let i = 0; i < start; i++) {
+      for (let i = 0; i < offset; i++) {
         const empty = document.createElement('div');
         calendar.appendChild(empty);
       }
 
-      for (let day = 1; day <= totalDays; day++) {
-        const div = document.createElement('div');
-        div.classList.add('day');
-        const date = new Date(year, month, day);
-        const iso = date.toISOString().split('T')[0];
-        div.textContent = day;
-        if (date.toDateString() === today.toDateString()) div.classList.add('today');
-        div.onclick = () => openModal(iso);
+      const stored = JSON.parse(localStorage.getItem('calendarWorkouts')) || {};
 
-        if (data[iso]) {
-          const type = data[iso].type;
-          const emojiMap = { run: '🏃‍♂️', bike: '🚴‍♂️', swim: '🏊‍♂️', weights: '🏋️‍♂️', hockey: '🏑' };
-          const emoji = emojiMap[type];
+      for (let d = 1; d <= end.getDate(); d++) {
+        const dateStr = `${year}-${month + 1}-${d}`;
+        const day = document.createElement('div');
+        day.className = 'day';
+        day.textContent = d;
+        if (
+          d === new Date().getDate() &&
+          month === new Date().getMonth() &&
+          year === new Date().getFullYear()
+        ) {
+          day.classList.add('today');
+        }
+        if (stored[dateStr]) {
+          const emoji = workoutEmojis[stored[dateStr].type];
           if (emoji) {
-            const span = document.createElement('span');
-            span.classList.add('emoji');
-            span.textContent = emoji;
-            div.appendChild(span);
+            const e = document.createElement('span');
+            e.className = 'emoji';
+            e.textContent = emoji;
+            day.appendChild(e);
           }
         }
-        calendar.appendChild(div);
+        day.onclick = () => openModal(dateStr, stored[dateStr]);
+        calendar.appendChild(day);
       }
-      updateSummary();
     }
 
-    function openModal(date) {
-      selectedDate = date;
-      modalDate.textContent = `Workout on ${date}`;
-      document.getElementById('workoutType').value = '';
-      document.getElementById('distance').value = '';
-      document.getElementById('duration').value = '';
-      document.getElementById('weightsType').style.display = 'none';
-      modal.style.display = 'block';
-    }
-
-    function closeModal() {
-      modal.style.display = 'none';
-    }
-
-    function handleWorkoutType() {
-      const type = document.getElementById('workoutType').value;
-      document.getElementById('distance').style.display = ['run','bike','swim'].includes(type) ? 'block' : 'none';
-      document.getElementById('duration').style.display = ['run','bike','swim'].includes(type) ? 'block' : 'none';
-      document.getElementById('weightsType').style.display = type === 'weights' ? 'block' : 'none';
-    }
-
-    function saveWorkout() {
-      const type = document.getElementById('workoutType').value;
-      const distance = document.getElementById('distance').value;
-      const duration = document.getElementById('duration').value;
-      const weightsType = document.getElementById('weightsType').value;
-
-      if (!type) return;
-
-      const data = getFromLocalStorage();
-      data[selectedDate] = { type, distance, duration, weightsType };
-      saveToLocalStorage(data);
-      closeModal();
-      renderCalendar(currentMonth, currentYear);
-    }
-
-    function updateSummary() {
-      const data = getFromLocalStorage();
-      const filtered = Object.entries(data).filter(([key, val]) => {
-        const date = new Date(key);
-        return date.getMonth() === currentMonth && date.getFullYear() === currentYear;
-      });
-      let runDist = 0, runTime = 0, swimDist = 0, swimTime = 0, bikeDist = 0, bikeTime = 0, weights = 0, hockey = 0;
-
-      filtered.forEach(([_, val]) => {
-        if (val.type === 'run') {
-          runDist += +val.distance || 0;
-          runTime += +val.duration || 0;
-        }
-        if (val.type === 'swim') {
-          swimDist += +val.distance || 0;
-          swimTime += +val.duration || 0;
-        }
-        if (val.type === 'bike') {
-          bikeDist += +val.distance || 0;
-          bikeTime += +val.duration || 0;
-        }
-        if (val.type === 'weights') weights++;
-        if (val.type === 'hockey') hockey++;
-      });
-
-      summary.innerHTML = `
-        <strong>🏃‍♂️ Run:</strong> ${runDist}km, ${runTime}min<br>
-        <strong>🏊‍♂️ Swim:</strong> ${swimDist}m, ${swimTime}min<br>
-        <strong>🚴‍♂️ Bike:</strong> ${bikeDist}km, ${bikeTime}min<br>
-        <strong>🏋️‍♂️ Weights:</strong> ${weights} sessions<br>
-        <strong>🏑 Hockey:</strong> ${hockey} sessions
+    function openModal(dateStr, workout) {
+      const modalContainer = document.getElementById('modalContainer');
+      modalContainer.innerHTML = `
+        <div class="overlay" onclick="closeModal()"></div>
+        <div class="modal">
+          <h3>${dateStr}</h3>
+          ${workout ? `
+            <p><strong>Type:</strong> ${workout.type}</p>
+            ${workout.distance ? `<p><strong>Distance:</strong> ${workout.distance}m</p>` : ''}
+            ${workout.time ? `<p><strong>Time:</strong> ${workout.time}min</p>` : ''}
+            ${workout.detail ? `<p><strong>Detail:</strong> ${workout.detail}</p>` : ''}
+            <button onclick="editWorkout('${dateStr}')">Edit</button>
+            <button onclick="deleteWorkout('${dateStr}')">Delete</button>
+          ` : `
+            <p>No workout logged.</p>
+            <button onclick="editWorkout('${dateStr}')">Add Workout</button>
+          `}
+          <button onclick="closeModal()">Back</button>
+        </div>
       `;
     }
 
-    renderCalendar(currentMonth, currentYear);
+    function closeModal() {
+      document.getElementById('modalContainer').innerHTML = '';
+    }
+
+    function deleteWorkout(dateStr) {
+      const stored = JSON.parse(localStorage.getItem('calendarWorkouts')) || {};
+      delete stored[dateStr];
+      localStorage.setItem('calendarWorkouts', JSON.stringify(stored));
+      closeModal();
+      renderCalendar();
+    }
+
+    function editWorkout(dateStr) {
+      // You can hook in your input UI modal here
+      alert(`Feature to edit/add workout for ${dateStr} coming next`);
+    }
+
+    function prevMonth() {
+      currentDate.setMonth(currentDate.getMonth() - 1);
+      renderCalendar();
+    }
+
+    function nextMonth() {
+      currentDate.setMonth(currentDate.getMonth() + 1);
+      renderCalendar();
+    }
+
+    renderCalendar();
   </script>
 </body>
 </html>
